# AreaCoverage-library

./: CMakeLists.txt  README.md  aclibrary-config.cmake.in  aclibrary_config.h.in
config/: AC300.yaml  RAL_main.yaml  default_config.yaml  geo.yaml  vm25.yaml
include/aclibrary/: cgal_config.h  compute_altitude.h  config.h  constants.h  env.h  lclibrary_utils.h  pgn_print.h  plot_graph.h  polygon_utilities.h  service_tracks.h  service_tracks_pwh.h  video_generator.h
main/: mac_custom_robot.cc  mac_point_robot.cc
scripts/: matlab_plot.m  matlab_plot_coverage.m
src/: env.cc  env_decomposition.cc  env_io.cc  env_split.cc  polygon_utilities.cc  video_generator.cc
